fix the error of save experience and save education
