# src/app/services/models/tuteur.ts
@@ -2,11 +2,11 @@
 /* eslint-disable */
 import { User } from '../models/user';
 export interface Tuteur {
-  skills?: string;
-  period?: string | number;
   educationlevel?: string;
   experience?: string;
   id?: number;
+  period?: number;
+  skills?: string;
   title?: string;
   user?: User;
 }
